infrastructure/observability/prometheus/resources/httproute-prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-route
  namespace: monitoring
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway-platform
    namespace: istio-system
  hostnames:
  - "prometheus.platform.yu-min3.com"
  - "prometheus.yu-mins.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ''
      kind: Service
      name: prometheus-kube-prometheus-prometheus
      port: 9090
      weight: 1
